--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,6 +35,8 @@
 
           <li>CSS adds style to the webpage</li>
           <li>CSS defines colors, aesthetics, the visual layout, and organization</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside an element</li>
 
         </ul>
 
@@ -45,8 +48,8 @@
 
         <ul>
 
-          <li>Git notes</li>
-          <li>Git notes</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
 
         </ul>
      
