--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
         <ul>
 
-          <li>JS notes</li>
-          <li>Git notes</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
 
         </ul>
         
